# da

./: .gitignore
bass/src/: lib.rs
cs-env/: Cargo.toml  build.rs  wrapper.h
cs-env/exploration/: Cargo.toml
cs-env/exploration/src/: main.rs
cs-env/plugin/: main.c  package.sh
cs-env/plugin/examples/: floss.c  xarg.c
cs-env/src/: lib.rs
cs-patch/src/: lib.rs
da-csound/: Cargo.toml
da-csound/src/: config.rs  lib.rs  midi.rs
da-host/: Cargo.toml
da-host/src/: constants.rs  http.rs  jk.rs  main.rs  param.rs
da-interface/: Cargo.toml
da-interface/src/: lib.rs
da-webui/: Cargo.toml
da-webui/src/: lib.js  lib.rs
kick/: Cargo.toml  csound.csd  kick.csd  presets.txt  run.sh  test.csd
kick/src/: csound_io.rs  lib.rs
patch/: run.sh  run_csound.sh
patch/src/: bass.csd  bass.rs  csound.rs  kick.csd  kick.rs  lib.rs
patch/src/scratchpad/: a01.csd  a01.rs  a02.csd  a02.rs  a03.csd  mod.rs
