[package]
name = "kick"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
da-interface = { path = "../da-interface" }
da-csound = { path = "../da-csound" }
da-webui = { path = "../da-webui" }
once_cell = "1.19.0"